First frontend connected with logic